--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -17,15 +17,10 @@
     <div class="navbar-collapse collapse">
         <ul class="navbar-nav navbar-align">
             <li class="nav-item dropdown">
-                <a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#"
-                    data-toggle="dropdown">
-                    <i class="align-middle" data-feather="settings"></i>
-                </a>
 
                 <a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#"
                     data-toggle="dropdown">
-                    <img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded mr-1"
-                        alt="Charles Hall" /> <span class="text-dark">{{ request.user }}</span>
+                    {{ request.user }}
                 </a>
                 
                 {% if user.is_authenticated %}
