--- a/templates/accounts/all-users.html
+++ b/templates/accounts/all-users.html
@@ -7,25 +7,37 @@
     <div class="row">
         <div class="col-12 col-xl-12 m-auto">
             <div class="card card-body">
+                <div class="g-btn float-right">
+                    <a href="{% url 'account:rider_register' %}" class="btn btn-primary">Add Rider</a>
+                    <a href="{% url 'account:hubmanager_register' %}" class="btn btn-primary">Add Hubmanager</a>
+                </div>
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
                             <th>Username</th>
                             <th>Email</th>
-                            <th>Status</th>
+                            <th>Profession</th>
+                            <th>Area</th>
                             <th>Is activate</th>
                         </tr>
                     </thead>
                     <tbody>
                         
-                        {% for object in object_list %}
+                        {% for object in rider %}
                             <tr>
                                 <td>{{ object.username }}</td>
                                 <td>{{ object.email }}</td>
                                 <td>
-                                    {{ object.type }}
+                                    {% if object.is_hubmanager %}
+                                        HUBMANAGER
+                                    {% else %}
+                                        RIDER
+                                    {% endif %}
+                                        
                                 </td>
-                                    
+                                <td>
+                                    {{ object.area_location }}
+                                </td>
                                 <td>{{ object.is_active }}</td>
                             </tr>
                         {% endfor %}
