--- a/templates/percels/arealocation-list.html
+++ b/templates/percels/arealocation-list.html
@@ -13,7 +13,7 @@
                     <h6 class="card-subtitle text-muted">Add <code>.table-hover</code> to enable a hover state on table
                         rows within a <code>&lt;tbody&gt;</code>.</h6>
                     </div>
-                    <a href="{% url 'percel:percelcreate_view' %}" class="btn btn-primary float-right">Add Percel</a>
+                    <a href="{% url 'arealocation:create_arealocation_view' %}" class="btn btn-primary float-right">Add Percel</a>
                 </div>
                 <table class="table table-striped table-hover">
                     <thead>
