--- a/templates/percels/picuplocation-list.html
+++ b/templates/percels/picuplocation-list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block head_title %}{% endblock head_title %}
+{% block head_title %}Picup Location List{% endblock head_title %}
 
 {% block content %}
 <div class="container">
@@ -13,7 +13,7 @@
                     <h6 class="card-subtitle text-muted">Add <code>.table-hover</code> to enable a hover state on table
                         rows within a <code>&lt;tbody&gt;</code>.</h6>
                     </div>
-                    <a href="{% url 'percel:create_picuplocation_view' %}" class="btn btn-primary float-right">Add Picup Location</a>
+                    <a href="{% url 'picuplocation:create_picuplocation_view' %}" class="btn btn-primary float-right">Add Picup Location</a>
                 </div>
                 <table class="table table-striped table-hover">
                     <thead>
