--- a/templates/snippets/side-navbar.html
+++ b/templates/snippets/side-navbar.html
@@ -17,7 +17,7 @@
             </li>
 
             
-            {% if user.is_staff %}
+            {% if user.is_hubmanager %}
                 <li class="sidebar-item">
                     <a class="sidebar-link" href="{% url 'percel:percels_list' %}">
                         <i class="align-middle"></i> <span
@@ -25,21 +25,27 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="{% url 'percel:area_location_list' %}">
+                    <a class="sidebar-link" href="{% url 'arealocation:area_location_list' %}">
                         <i class="align-middle" data-feather="plus-square"></i> <span
                             class="align-middle">Area Location</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="{% url 'percel:picuplocation_list' %}">
+                    <a class="sidebar-link" href="{% url 'picuplocation:picuplocation_list' %}">
                         <i class="align-middle" data-feather="plus-square"></i> <span
                             class="align-middle">Picup Location</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a class="sidebar-link" href="{% url 'percel:percel_picup_and_delivery_view' %}">
+                    <a class="sidebar-link" href="{% url 'percelpicupanddelivery:picup_percel' %}">
                         <i class="align-middle" data-feather="plus-square"></i> <span
-                            class="align-middle">Picup and delivery Percels</span>
+                            class="align-middle">Percels Picup</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="{% url 'percelpicupanddelivery:delivery_percel' %}">
+                        <i class="align-middle" data-feather="plus-square"></i> <span
+                            class="align-middle">Percels Delivery</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
